--- a/apps/server/just-site/src/app.html
+++ b/apps/server/just-site/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link href="%sveltekit.assets%/favicon.png" rel="icon" />
+        <link href="%sveltekit.assets%/public/favicon.webp" rel="icon" />
         <meta content="width=device-width" name="viewport" />
         <link href="%sveltekit.assets%/manifest.json" rel="manifest" />
         <meta content="%sveltekit.assets%/preview.png" property="og:image" />
