feat(server-just-dashboard): added simple SEO

--- a/apps/server/just-site/src/app.html
+++ b/apps/server/just-site/src/app.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta content="text/html; utf-8" http-equiv="content-Type" />
+        <meta content="cache" http-equiv="Pragma" />
+        <meta content="INDEX,FOLLOW" name="robots" />
+        <meta content="en" http-equiv="content-Language" />
         <link href="%sveltekit.assets%/favicon.ico" rel="icon" />
         <meta content="width=device-width" name="viewport" />
         %sveltekit.head%
