--- a/apps/server/just-site/src/app.html
+++ b/apps/server/just-site/src/app.html
@@ -10,7 +10,7 @@
         <meta content="width=device-width" name="viewport" />
         %sveltekit.head%
     </head>
-    <body data-sveltekit-preload-data="hover" class="overflow-x-hidden">
+    <body data-sveltekit-preload-data="hover">
         <div class="contents">%sveltekit.body%</div>
     </body>
 </html>
