--- a/packages/just/website/src/app.html
+++ b/packages/just/website/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8" />
         <meta content="text/html; utf-8" http-equiv="content-Type" />
