--- a/packages/just/website/src/app.html
+++ b/packages/just/website/src/app.html
@@ -1,13 +1,10 @@
 <!doctype html>
-<html>
+<html lang="%lang%">
     <head>
         <meta charset="utf-8" />
         <meta content="text/html; utf-8" http-equiv="content-Type" />
-        <meta content="cache" http-equiv="Pragma" />
-        <meta content="INDEX,FOLLOW" name="robots" />
-        <meta content="en" http-equiv="content-Language" />
+        <meta name="viewport" content="width=device-width" />
         <link href="%sveltekit.assets%/favicon.ico" rel="icon" />
-        <meta content="width=device-width" name="viewport" />
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover">
