--- a/packages/just/music/download-addon/src/popup.html
+++ b/packages/just/music/download-addon/src/popup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./tailwind.css" />
     </head>
     <body class="w-120 bg-white p-4 shadow-lg">
         <div id="app" class="space-y-4">
