feat(just-music-marketplace): improve UI

--- a/packages/just/music/marketplace/src/app.html
+++ b/packages/just/music/marketplace/src/app.html
@@ -7,7 +7,7 @@
         <meta content="cache" http-equiv="Pragma" />
         <meta content="INDEX,FOLLOW" name="robots" />
         <meta content="en" http-equiv="content-Language" />
-        <meta content="width=device-width" name="viewport" />
+        <meta content="width=device-width,initial-scale=1" name="viewport" />
         <link rel="icon" href="%sveltekit.assets%/favicon.ico" type="image/x-icon" />
         %sveltekit.head%
     </head>
